Update project structure and enhance user interface
- Added production build scripts in package.json for streamlined deployment.
- Expanded README.md to provide a comprehensive overview of the Video Optimizer application, including features, technologies, and installation instructions.
- Updated HTML templates across various components to improve accessibility and user experience by translating comments and labels from French to English.
- Enhanced Tauri configuration for better window management and user interface layout.

These changes aim to improve the overall usability and maintainability of the application.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- Appbar personnalisée -->
+<!-- Custom Appbar -->
 <app-advanced-appbar
   (filesSelected)="onFilesSelect()"
   (settingsClicked)="onSettingsClick()"
@@ -6,7 +6,7 @@
   (ffmpegFormatsClicked)="onFfmpegFormatsClick()"
 ></app-advanced-appbar>
 
-<!-- Contenu principal -->
+<!-- Main Content -->
 <div class="main-content">
   <app-videos-table />
 </div>
