--- a/src/components/videos-table/videos-table.component.html
+++ b/src/components/videos-table/videos-table.component.html
@@ -1,14 +1,14 @@
 <div class="videos-table-container">
   <div class="table-header">
-    <h3>Fichiers vidéo sélectionnés ({{ videoFiles().length }})</h3>
+    <h3>Selected Video Files ({{ videoFiles().length }})</h3>
   </div>
 
   @if (videoFiles().length > 0) {
   <div class="table-content">
     <table mat-table [dataSource]="videoFiles()" class="videos-table">
-      <!-- Nom du fichier -->
+      <!-- File Name -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Nom du fichier</th>
+        <th mat-header-cell *matHeaderCellDef>File Name</th>
         <td mat-cell *matCellDef="let video">
           <div class="file-info">
             <mat-icon class="file-icon">video_file</mat-icon>
@@ -17,9 +17,9 @@
         </td>
       </ng-container>
 
-      <!-- Taille du fichier -->
+      <!-- File Size -->
       <ng-container matColumnDef="size">
-        <th mat-header-cell *matHeaderCellDef>Taille</th>
+        <th mat-header-cell *matHeaderCellDef>Size</th>
         <td mat-cell *matCellDef="let video">
           <div class="file-size-container">
             <span class="file-size" *ngIf="!video.loading">{{
@@ -30,7 +30,7 @@
                 mode="indeterminate"
                 diameter="16"
               ></mat-progress-spinner>
-              <span>Chargement...</span>
+              <span>Loading...</span>
             </div>
             <span class="error-text" *ngIf="video.error && !video.loading">{{
               video.error
@@ -39,9 +39,9 @@
         </td>
       </ng-container>
 
-      <!-- Titre du film/série -->
+      <!-- Movie/Series Title -->
       <ng-container matColumnDef="movieTitle">
-        <th mat-header-cell *matHeaderCellDef>Titre du film/série</th>
+        <th mat-header-cell *matHeaderCellDef>Movie/Series Title</th>
         <td mat-cell *matCellDef="let video">
           <div class="movie-info">
             @if (video.movieInfoLoading) {
@@ -50,7 +50,7 @@
                 mode="indeterminate"
                 diameter="16"
               ></mat-progress-spinner>
-              <span>Recherche...</span>
+              <span>Searching...</span>
             </div>
             } @else if (video.movieInfo) {
             <div class="movie-details">
@@ -66,12 +66,12 @@
               @if (video.movieInfo.confidence < 0.7) {
               <div class="confidence-warning">
                 <mat-icon>warning</mat-icon>
-                <span>Confiance faible</span>
+                <span>Low confidence</span>
               </div>
               }
             </div>
             } @else {
-            <span class="no-info">Aucune information</span>
+            <span class="no-info">No information</span>
             }
           </div>
         </td>
@@ -85,7 +85,7 @@
             <button
               mat-icon-button
               color="primary"
-              matTooltip="Voir les détails d'optimisation"
+              matTooltip="View optimization details"
               (click)="onVideoClick(video)"
               [class.selected]="selectedVideo()?.path === video.path"
             >
@@ -96,7 +96,7 @@
             <button
               mat-icon-button
               color="accent"
-              matTooltip="Choisir un autre film/série"
+              matTooltip="Choose another movie/series"
               (click)="onOpenMovieAlternatives(video, $event)"
             >
               <mat-icon>movie</mat-icon>
@@ -105,7 +105,7 @@
             <button
               mat-icon-button
               color="warn"
-              matTooltip="Supprimer de la liste"
+              matTooltip="Remove from list"
               (click)="onVideoRemove(video, $event)"
             >
               <mat-icon>delete</mat-icon>
@@ -128,10 +128,8 @@
   <ng-template>
     <div class="no-files">
       <mat-icon class="no-files-icon">video_library</mat-icon>
-      <p>Aucun fichier vidéo sélectionné</p>
-      <p class="subtitle">
-        Sélectionnez des fichiers vidéo pour commencer l'optimisation
-      </p>
+      <p>No video files selected</p>
+      <p class="subtitle">Select video files to start optimization</p>
     </div>
   </ng-template>
   } @if (selectedVideo()) {
